--- a/sdk/build.gradle
+++ b/sdk/build.gradle
@@ -1,7 +1,10 @@
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 28
+    buildToolsVersion "28.0.3"
 
 
 
@@ -22,6 +25,10 @@ android {
         }
     }
 
+
+    sourceSets {
+        test.java.srcDirs += 'src/test/java'
+    }
 }
 
 dependencies {
@@ -29,6 +36,11 @@ dependencies {
 
     implementation 'com.android.support:appcompat-v7:28.0.0'
     testImplementation 'junit:junit:4.12'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+}
+repositories {
+    mavenCentral()
 }
