--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,10 @@ android:
   - extra-android-support
   - sys-img-armeabi-v7a-android-28
 
+branches:
+  only:
+  - master
+
 script:
 - ./gradlew assembleRelease
 
@@ -16,14 +20,14 @@ before_script:
 # 修改你的 gradlew的权限，默认gradlew没有权限执行的
 - chmod +x gradlew
 
-- echo no | android create avd --force -n test -t android-28 --abi armeabi-v7a
-- emulator -avd test -no-audio -no-window &
-- android-wait-for-emulator
-- adb shell input keyevent 82 &
+#- echo no | android create avd --force -n test -t android-28 --abi armeabi-v7a
+#- emulator -avd test -no-audio -no-window &
+#- android-wait-for-emulator
+#- adb shell input keyevent 82 &
 
-before_cache:
-- rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
-cache:
-  directories:
-  - $HOME/.gradle/caches/
-  - $HOME/.gradle/wrapper/
+#before_cache:
+#- rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
+#cache:
+#  directories:
+#  - $HOME/.gradle/caches/
+#  - $HOME/.gradle/wrapper/
