--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ android:
   - android-28
   - extra-android-m2repository
   - extra-android-support
-  - sys-img-armeabi-v7a-android-28
+  - sys-img-armeabi-v7a-addon-google_apis-google-28
 
 branches:
   only:
@@ -20,15 +20,16 @@ script:
 before_script:
 # 修改你的 gradlew的权限，默认gradlew没有权限执行的
 - chmod +x gradlew
+- echo no | android create avd --force -n test -t android-28 --abi google_apis/armeabi-v7a
+- emulator -avd test -no-audio -no-window &
+- android-wait-for-emulator
+- adb shell input keyevent 82 &
 
 after_success:
 - sleep 5
 - bash <(curl -s https://codecov.io/bash)
 
-#- echo no | android create avd --force -n test -t android-28 --abi armeabi-v7a
-#- emulator -avd test -no-audio -no-window &
-#- android-wait-for-emulator
-#- adb shell input keyevent 82 &
+
 
 #before_cache:
 #- rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
