--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,11 @@ android:
   components:
   - tools
   - build-tools-28.0.3
+  - android-24
   - android-28
   - extra-android-m2repository
   - extra-android-support
-  - addon-google_apis-google-28
-  - sys-img-armeabi-v7a-android-28
+  - sys-img-armeabi-v7a-android-24
 
 branches:
   only:
@@ -21,7 +21,7 @@ script:
 before_script:
 # 修改你的 gradlew的权限，默认gradlew没有权限执行的
 - chmod +x gradlew
-- echo no | android create avd --force -n test -t android-28 --abi armeabi-v7a
+- echo no | android create avd --force -n test -t android-24 --abi armeabi-v7a
 - emulator -avd test -no-audio -no-window &
 - android-wait-for-emulator
 - adb shell input keyevent 82 &
