--- a/oreo/src/main/AndroidManifest.xml
+++ b/oreo/src/main/AndroidManifest.xml
@@ -1,2 +1,2 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.cdts.sdk"/>
+          package="com.cdts.oreo"/>
