--- a/oreo/build.gradle
+++ b/oreo/build.gradle
@@ -30,7 +30,7 @@ android {
 
 
     sourceSets {
-        test.java.srcDirs += 'src/test/java'
+        test.java.srcDirs += 'src/androidTest/java'
     }
 }
 
