--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,29 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.11'
+    ext {
+        compileSdkVersion = 27
+        minSdkVersion = 16
+        targetSdkVersion = 27
+        buildToolsVersion = '27.0.3'
+
+        kotlin_version = '1.3.11'
+        android_plugin_version = '3.1.3'
+        support_library_version = '27.1.1'
+        constraint_layout_version = '1.1.2'
+
+        timber_version = '4.7.1'
+        okhttp_version = '3.11.0'
+        retrofit_version = '2.4.0'
+        rxjava_version = '2.2.0'
+        rxandroid_version = '2.0.2'
+        rxbinding_version = '2.1.1'
+        kotlin_coroutines_version = '1.1.0'
+
+        kprogresshud_version = '1.2.0'
+    }
+
+
     repositories {
         google()
         jcenter()
