--- a/oreo/build.gradle
+++ b/oreo/build.gradle
@@ -3,14 +3,13 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 28
-    buildToolsVersion "28.0.3"
-
+    compileSdkVersion rootProject.compile_sdk_version
+    buildToolsVersion rootProject.build_tools_version
 
 
     defaultConfig {
-        minSdkVersion 19
-        targetSdkVersion 28
+        minSdkVersion rootProject.min_sdk_version
+        targetSdkVersion rootProject.target_sdk_version
         versionCode 1
         versionName "1.0"
 
@@ -28,21 +27,30 @@ android {
         }
     }
 
-
     sourceSets {
+        test.java.srcDirs += 'src/test/java'
         test.java.srcDirs += 'src/androidTest/java'
+    }
+
+    dataBinding {
+        enabled = true
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    testImplementation 'junit:junit:4.12'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation "com.android.support:appcompat-v7:$rootProject.support_library_version"
+    testImplementation "junit:junit:$rootProject.junit_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$rootProject.kotlin_version"
+    testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$rootProject.kotlin_version"
+    androidTestImplementation "com.android.support.test:runner:$rootProject.support_test_version"
+    androidTestImplementation "com.android.support.test.espresso:espresso-core:$rootProject.support_test_espresso_version"
 
 
     api "com.jakewharton.timber:timber:$rootProject.timber_version"
@@ -56,7 +64,21 @@ dependencies {
     api "com.jakewharton.rxbinding2:rxbinding:$rootProject.rxbinding_version"
     api "org.jetbrains.kotlinx:kotlinx-coroutines-android:$rootProject.kotlin_coroutines_version"
 
+    api "com.google.dagger:dagger:$rootProject.dagger_version"
+    api "com.google.dagger:dagger-android-support:$rootProject.dagger_version"
+    kapt "com.google.dagger:dagger-compiler:$rootProject.dagger_version"
+    api "android.arch.lifecycle:extensions:$rootProject.lifecycle_version"
+    api "android.arch.lifecycle:runtime:$rootProject.lifecycle_version"
+    kapt "android.arch.lifecycle:compiler:$rootProject.lifecycle_version"
+    api "android.arch.lifecycle:common-java8:$rootProject.lifecycle_version"
+
+    api "com.github.tbruyelle:rxpermissions:$rootProject.rxpermissions_version"
     api "com.kaopiz:kprogresshud:$rootProject.kprogresshud_version"
+    api "com.jakewharton:disklrucache:$rootProject.disklru_cache_version"
+    api "com.blankj:utilcode:$rootProject.blankj_utilcode_version"
+    api "com.readystatesoftware.systembartint:systembartint:$rootProject.systembar_tint_version"
+    api "in.srain.cube:ptr-load-more:$rootProject.ptr_refresh_loadmore_version"
+
 }
 repositories {
     mavenCentral()
