--- a/oreo/src/main/AndroidManifest.xml
+++ b/oreo/src/main/AndroidManifest.xml
@@ -1,2 +1,4 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.cdts.oreo"/>
+          package="com.cdts.oreo">
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+</manifest>
