--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,10 @@ buildscript {
         blankj_utilcode_version = '1.22.10'
         systembar_tint_version = '1.0.4'
         ptr_refresh_loadmore_version = '1.0.6'
+        jsbridge_version = '1.0.4'
+        ktx_version = '1.0.1'
+        flyco_dialog_version = '1.3.2@aar'
+        gson_version = '2.8.5'
     }
 
 
