--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,7 @@ android {
         targetSdkVersion rootProject.target_sdk_version
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -42,5 +43,8 @@ dependencies {
 
     kapt "com.google.dagger:dagger-compiler:$rootProject.dagger_version"
     kapt "android.arch.lifecycle:compiler:$rootProject.lifecycle_version"
+
+    implementation "com.umeng.umsdk:analytics:$rootProject.umsdk_analytics_version"
+    implementation "com.umeng.umsdk:common:$rootProject.umsdk_common_version"
 
 }
