--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,10 @@ buildscript {
         ktx_version = '0.3'
         flyco_dialog_version = '1.3.2@aar'
         gson_version = '2.8.5'
+        multidex_version = '1.0.3'
+
+        umsdk_analytics_version = '8.0.0'
+        umsdk_common_version = '2.0.0'
     }
 
 
@@ -57,6 +61,8 @@ allprojects {
         google()
         jcenter()
         maven { url 'https://jitpack.io' }
+        maven { url 'https://dl.bintray.com/umsdk/release' }
+
     }
 }
 
