--- a/oreo/build.gradle
+++ b/oreo/build.gradle
@@ -2,6 +2,9 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'com.github.dcendents.android-maven'
+
+group='com.github.cdtschange'
 
 android {
     compileSdkVersion rootProject.compile_sdk_version
