--- a/jitpack.yml
+++ b/jitpack.yml
@@ -3,4 +3,4 @@ jdk:
 - oraclejdk8
 
 before_install:
-  - yes | $ANDROID_HOME/tools/bin/sdkmanager --licenses
+  - $ANDROID_HOME/tools/bin/sdkmanager --update && yes | $ANDROID_HOME/tools/bin/sdkmanager --licenses
