--- a/jitpack.yml
+++ b/jitpack.yml
@@ -3,4 +3,4 @@ jdk:
 - oraclejdk8
 
 before_install:
-  - echo "y" | $ANDROID_HOME/tools/bin/sdkmanager --update && echo "y" | $ANDROID_HOME/tools/bin/sdkmanager --licenses
+  - echo "y" | $ANDROID_HOME/tools/bin/sdkmanager --licenses
