--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,8 @@ buildscript {
         junit_version = '4.12'
         support_test_version = '1.0.2'
         support_test_espresso_version = '3.0.2'
+        mockito_version = '2.18.3'
+        mockito_kotlin_version = '1.6.0'
 
         timber_version = '4.7.1'
         okhttp_version = '3.12.1'
