--- a/oreo/src/main/AndroidManifest.xml
+++ b/oreo/src/main/AndroidManifest.xml
@@ -1,5 +1,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.cdts.oreo">
+    <application
+            android:name=".test.TestApplication"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.AppCompat.Light">
+
+        <activity android:name=".test.MainTestActivity"></activity>
+
+    </application>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
