--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
             android:label="@string/app_name"
             android:roundIcon="@drawable/ic_launcher"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme" >
+            android:theme="@style/AppTheme"
+            tools:node="replace" >
         <activity android:name=".ui.tab.view.MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
