--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
         target_sdk_version = 28
         build_tools_version = '28.0.3'
 
-        kotlin_version = '1.3.20'
+        kotlin_version = '1.3.21'
         android_plugin_version = '3.1.3'
         support_library_version = '28.0.0'
         constraint_layout_version = '1.1.3'
@@ -28,6 +28,7 @@ buildscript {
         dagger_version = '2.21'
         lifecycle_version = '1.1.1'
         navigation_version = '1.0.0-alpha05'
+        databinding_version = '3.1.4'
 
         rxpermissions_version = '0.10.2'
         kprogresshud_version = '1.2.0'
@@ -51,7 +52,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.0'
+        classpath 'com.android.tools.build:gradle:3.3.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "com.github.dcendents:android-maven-gradle-plugin:2.1"
 
