--- a/oreo/build.gradle
+++ b/oreo/build.gradle
@@ -68,7 +68,7 @@ dependencies {
     androidTestImplementation "org.mockito:mockito-core:$rootProject.mockito_version"
     androidTestImplementation "org.mockito:mockito-android:$rootProject.mockito_version"
     androidTestImplementation "com.nhaarman:mockito-kotlin:$rootProject.mockito_kotlin_version"
-
+    kaptAndroidTest "com.android.databinding:compiler:$rootProject.databinding_version"
 
     api "com.jakewharton.timber:timber:$rootProject.timber_version"
     api "com.squareup.okhttp3:okhttp:$rootProject.okhttp_version"
