--- a/oreo/src/main/AndroidManifest.xml
+++ b/oreo/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
             android:label="@string/app_name"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
 
-        <activity android:name=".test.MainTestActivity"></activity>
+        <activity android:name=".test.MainTestActivity" android:launchMode="singleTask"></activity>
         <activity android:name=".test.TestParamsActivity"></activity>
         <activity android:name=".test.TestWebViewActivity"></activity>
 
@@ -14,4 +14,5 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
 </manifest>
