--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,7 @@ buildscript {
 
         umsdk_analytics_version = '8.0.0'
         umsdk_common_version = '2.0.0'
+        doraemon_version = '1.1.0'
     }
 
 
@@ -52,9 +53,10 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.1'
+        classpath "com.android.tools.build:gradle:3.3.1"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "com.github.dcendents:android-maven-gradle-plugin:2.1"
+        classpath "com.didichuxing.doraemonkit:compiler:1.0.0"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
