--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,8 @@
         <activity android:name=".ui.webview.view.SimpleWebViewActivity" android:theme="@style/AppTheme" />
         <activity android:name=".ui.webview.view.WebBridgeViewActivity" android:theme="@style/AppTheme" />
         <activity android:name=".ui.indicatorview.view.IndicatorViewActivity" android:theme="@style/AppTheme" />
+        <activity android:name=".data.cache.view.CacheActivity" android:theme="@style/AppTheme" />
+        <activity android:name="com.didichuxing.doraemonkit.ui.UniversalActivity" android:theme="@style/AppTheme" />
 
     </application>
 
