--- a/build.gradle
+++ b/build.gradle
@@ -40,7 +40,7 @@ buildscript {
         ktx_version = '0.3'
         flyco_dialog_version = '1.3.2@aar'
         gson_version = '2.8.5'
-
+        easy_device_info_version = '2.4.1'
 
         umsdk_analytics_version = '8.0.0'
         umsdk_common_version = '2.0.0'
