--- a/oreo/build.gradle
+++ b/oreo/build.gradle
@@ -102,6 +102,7 @@ dependencies {
     api "androidx.core:core-ktx:$rootProject.ktx_version"
     api "com.flyco.dialog:FlycoDialog_Lib:$rootProject.flyco_dialog_version"
     api "com.google.code.gson:gson:$rootProject.gson_version"
+    api "com.github.nisrulz:easydeviceinfo:$easy_device_info_version"
 
 
 }
