--- a/oreo/src/main/AndroidManifest.xml
+++ b/oreo/src/main/AndroidManifest.xml
@@ -5,9 +5,9 @@
             android:label="@string/app_name"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
 
-        <activity android:name=".test.MainTestActivity" android:launchMode="singleTask"></activity>
-        <activity android:name=".test.TestParamsActivity"></activity>
-        <activity android:name=".test.TestWebViewActivity"></activity>
+        <activity android:name=".test.MainTestActivity" android:launchMode="singleTask" />
+        <activity android:name=".test.TestParamsActivity" />
+        <activity android:name=".test.TestWebViewActivity" />
 
     </application>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
@@ -15,4 +15,15 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
+
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.USE_FINGERPRINT" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
+
 </manifest>
