--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,7 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven { url 'https://dl.bintray.com/umsdk/release' }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:3.3.1"
