--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
             android:roundIcon="@drawable/ic_launcher"
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
+            android:usesCleartextTraffic="true"
             tools:node="replace" >
         <activity android:name="com.cdts.demo.tab.view.MainActivity" >
             <intent-filter>
@@ -29,6 +30,7 @@
         <activity android:name=".data.network.view.NetworkActivity" android:theme="@style/AppTheme" />
         <activity android:name=".data.device.view.DeviceInfoActivity" android:theme="@style/AppTheme" />
         <activity android:name=".data.location.view.LocationActivity" android:theme="@style/AppTheme" />
+        <activity android:name=".ui.animation.view.AnimationActivity" android:theme="@style/AppTheme" />
         <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
     </application>
 
@@ -46,5 +48,7 @@
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
+    <uses-permission android:name="android.permission.GET_TASKS" />
 
 </manifest>
