--- a/build.gradle
+++ b/build.gradle
@@ -7,27 +7,27 @@ buildscript {
         target_sdk_version = 28
         build_tools_version = '28.0.3'
 
-        kotlin_version = '1.3.21'
+        kotlin_version = '1.3.72'
         android_plugin_version = '3.1.3'
         support_library_version = '28.0.0'
         constraint_layout_version = '1.1.3'
         multidex_version = '1.0.3'
-        junit_version = '4.12'
+        junit_version = '4.13'
         support_test_version = '1.0.2'
         support_test_espresso_version = '3.0.2'
-        mockito_version = '2.18.3'
+        mockito_version = '3.3.3'
         mockito_kotlin_version = '1.6.0'
 
         timber_version = '4.7.1'
-        okhttp_version = '3.12.1'
-        retrofit_version = '2.5.0'
-        rxjava_version = '2.2.5'
-        rxandroid_version = '2.1.0'
+        okhttp_version = '4.6.0'
+        retrofit_version = '2.8.1'
+        rxjava_version = '2.2.19'
+        rxandroid_version = '2.1.1'
         rxbinding_version = '2.2.0'
-        kotlin_coroutines_version = '1.1.0'
-        dagger_version = '2.21'
+        kotlin_coroutines_version = '1.3.6'
+        dagger_version = '2.27'
         lifecycle_version = '1.1.1'
-        navigation_version = '1.0.0-alpha05'
+        navigation_version = '1.0.0'
         databinding_version = '3.1.4'
 
         rxpermissions_version = '0.10.2'
@@ -37,9 +37,9 @@ buildscript {
         systembar_tint_version = '1.0.4'
         ptr_refresh_loadmore_version = '1.0.6'
         jsbridge_version = '1.0.4'
-        ktx_version = '0.3'
+        ktx_version = '1.2.0'
         flyco_dialog_version = '1.3.2@aar'
-        gson_version = '2.8.5'
+        gson_version = '2.8.6'
         easy_device_info_version = '2.4.1'
 
         umsdk_analytics_version = '8.0.0'
@@ -64,7 +64,7 @@ buildscript {
         maven { url 'https://dl.bintray.com/umsdk/release' }
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:3.3.2"
+        classpath 'com.android.tools.build:gradle:3.6.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "com.github.dcendents:android-maven-gradle-plugin:2.1"
         classpath "com.didichuxing.doraemonkit:compiler:1.0.0"
