--- a/oreo/build.gradle
+++ b/oreo/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'com.github.dcendents.android-maven'
 
@@ -18,7 +18,7 @@ android {
         versionName "1.0"
         multiDexEnabled true
 
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
     }
 
@@ -46,29 +46,33 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8.toString()
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    api "com.android.support:appcompat-v7:$rootProject.support_library_version"
-    api "com.android.support.constraint:constraint-layout:$rootProject.constraint_layout_version"
-    api "com.android.support:support-v4:$rootProject.support_library_version"
-    api "com.android.support:design:$rootProject.support_library_version"
-    api "com.android.support:multidex:$rootProject.multidex_version"
+    api 'androidx.appcompat:appcompat:1.1.0'
+    api 'androidx.constraintlayout:constraintlayout:1.1.3'
+    api 'androidx.legacy:legacy-support-v4:1.0.0'
+    api 'com.google.android.material:material:1.1.0'
+    api 'androidx.multidex:multidex:2.0.1'
     testImplementation "junit:junit:$rootProject.junit_version"
     testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$rootProject.kotlin_version"
-    testImplementation "com.android.support.test:runner:$rootProject.support_test_version"
-    testImplementation "com.android.support.test.espresso:espresso-core:$rootProject.support_test_espresso_version"
+    testImplementation 'androidx.test.ext:junit:1.1.1'
+    testImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     androidTestImplementation "junit:junit:$rootProject.junit_version"
     androidTestImplementation "org.jetbrains.kotlin:kotlin-test-junit:$rootProject.kotlin_version"
-    androidTestImplementation "com.android.support.test:runner:$rootProject.support_test_version"
-    androidTestImplementation "com.android.support.test:rules:$rootProject.support_test_version"
-    androidTestImplementation "com.android.support.test.espresso:espresso-core:$rootProject.support_test_espresso_version"
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test:rules:1.2.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     androidTestImplementation "org.mockito:mockito-core:$rootProject.mockito_version"
     androidTestImplementation "org.mockito:mockito-android:$rootProject.mockito_version"
     androidTestImplementation "com.nhaarman:mockito-kotlin:$rootProject.mockito_kotlin_version"
-    kaptAndroidTest "com.android.databinding:compiler:$rootProject.databinding_version"
+    kaptAndroidTest 'androidx.databinding:databinding-compiler:3.6.3'
 
     api "com.jakewharton.timber:timber:$rootProject.timber_version"
     api "com.squareup.okhttp3:okhttp:$rootProject.okhttp_version"
@@ -86,12 +90,11 @@ dependencies {
     api "com.google.dagger:dagger:$rootProject.dagger_version"
     api "com.google.dagger:dagger-android-support:$rootProject.dagger_version"
     kapt "com.google.dagger:dagger-compiler:$rootProject.dagger_version"
-    api "android.arch.lifecycle:extensions:$rootProject.lifecycle_version"
-    api "android.arch.lifecycle:runtime:$rootProject.lifecycle_version"
-    kapt "android.arch.lifecycle:compiler:$rootProject.lifecycle_version"
-    api "android.arch.lifecycle:common-java8:$rootProject.lifecycle_version"
-    api "android.arch.navigation:navigation-fragment:$rootProject.navigation_version"
-    api "android.arch.navigation:navigation-ui:$rootProject.navigation_version"
+    api 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    api 'androidx.lifecycle:lifecycle-runtime:2.2.0'
+    api 'androidx.lifecycle:lifecycle-common-java8:2.2.0'
+    api 'androidx.navigation:navigation-fragment:2.3.0-alpha06'
+    api 'androidx.navigation:navigation-ui:2.3.0-alpha06'
 
     api "com.github.tbruyelle:rxpermissions:$rootProject.rxpermissions_version"
     api "com.kaopiz:kprogresshud:$rootProject.kprogresshud_version"
