--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,10 @@ android {
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_1_8.toString()
     }
+    
+    lintOptions {
+        abortOnError false
+    }
 }
 
 dependencies {
