--- a/oreo/build.gradle
+++ b/oreo/build.gradle
@@ -50,6 +50,10 @@ android {
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_1_8.toString()
     }
+
+    lintOptions {
+        abortOnError false
+    }
 }
 
 dependencies {
