--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,14 @@ branches:
   - master
 
 script:
-#- ./gradlew assembleRelease
-- travis_wait 60
-  ./gradlew build connectedCheck
+  #- ./gradlew assembleRelease
+  # Output something every 10 minutes or Travis kills the job
+  - while sleep 9m; do echo "=====[ $SECONDS seconds still running ]====="; done &
+  - ./gradlew build connectedCheck
+  # Killing background sleep loop
+  - kill %1
+  #- travis_wait 60
+  #  ./gradlew build connectedCheck
 
 before_script:
 # 修改你的 gradlew的权限，默认gradlew没有权限执行的
